Added screen media type to media query

--- a/CSS/television.css
+++ b/CSS/television.css
@@ -340,7 +340,7 @@ nav {
     }
 }
 /* Tablet Devices */
-@media (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
     nav {
         padding: 10px 40px;
     }
