--- a/CSS/camera.css
+++ b/CSS/camera.css
@@ -3428,22 +3428,98 @@ form button:hover {
         margin-top: 85px;
         margin-left: 140px;
     }
-        .footer {
-            margin-top: 40px;
-            width: auto;
-            font-size: 17px;
-            padding: 100px 10%;
-            background-color: rgb(201, 223, 213);
-            color: #30665b;
-            display: flex;
-        }
-    
-        .footer div {
-            text-align: center;
-            justify-content: space-around;
-        }
-    
-        .first {
-            padding-left: 40px;
-        }
+
+    .footer {
+        margin-top: 40px;
+        width: auto;
+        font-size: 17px;
+        padding: 100px 10%;
+        background-color: rgb(201, 223, 213);
+        color: #30665b;
+        display: flex;
+    }
+
+    .footer div {
+        text-align: center;
+        justify-content: space-around;
+    }
+
+    .first {
+        padding-left: 40px;
+    }
+
+    .second {
+        flex-grow: .9;
+        padding-left: 70px;
+    }
+
+    footer {
+        background-color: #ffffff;
+        text-align: center;
+    }
+
+    .footer div h3 {
+        font-weight: 300;
+        margin-bottom: 30px;
+        font-size: 20px;
+        letter-spacing: 1px;
+    }
+
+    .footer h3 {
+        color: rgb(252, 105, 0);
+    }
+
+    .footer h3:hover {
+        border-bottom: .5px solid rgb(199, 11, 11);
+    }
+
+    .first a {
+        display: block;
+        text-decoration: none;
+        color: rgb(135, 89, 29);
+        margin-bottom: 10px;
+        font-size: 19px;
+    }
+
+    form input {
+        width: 400px;
+        height: 45px;
+        border-radius: 7px;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 40px;
+        outline: none;
+        border: 1px solid rgb(236, 188, 67);
+    }
+
+    form button {
+        background-color: #428579;
+        border: 1px solid goldenrod;
+        color: #264412;
+        color: #ecf3f2;
+        border-radius: 30px;
+        padding: 10px 30px;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    form button:hover {
+        background-color: rgb(225, 149, 6);
+    }
+
+    .icon {
+        display: flex;
+        flex-direction: row;
+        margin-top: 30px;
+    }
+
+    .icon img {
+        height: 30px;
+        width: 30px;
+        cursor: pointer;
+    }
+
+    .icon img:hover:hover {
+        box-shadow: 0 0 7px 4px rgb(181, 131, 178);
+    }
 }
