header bg color change

--- a/CSS/camera.css
+++ b/CSS/camera.css
@@ -267,7 +267,7 @@ nav {
 }
 
 header {
-    background-color: #f8f9fa;
+    background-color: #c2e1db;
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
