--- a/CSS/earphone.css
+++ b/CSS/earphone.css
@@ -431,6 +431,17 @@ margin-left: 50px;
     padding-right: 20px;
     padding-top: 30px;
 }
+.first{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:column;
+     justify-content: start;
+     padding-right: 80px;
+     padding-left: 30px;
+}
+.second{
+    display: none;
+}
 }
 /* Mobile Devices */
 @media screen and (min-width: 601px) and (max-width: 915px) {
@@ -508,6 +519,17 @@ display: none;
 .sell {
     padding-left: 40px;
     text-align: left;
+}
+.first{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:column;
+     justify-content: start;
+     padding-right: 80px;
+     padding-left: 30px;
+}
+.second{
+    display: none;
 }
 }
   /* Tablet Devices */
